# UltralyticsToOpenvino

./: .gitignore  CLAUDE.md  Dockerfile  README.md  ai_colormap.py  ai_model_pb2.py  docker-compose.yml  export_openvino.py  pyproject.toml  requirements.txt  scanner.py  scanner_logging.py  viridis_colormap.py
.claude/: settings.json
.claude/memory/: MEMORY.md  kubernetes-clusters.md  tally-data-reset.md
scanner_ai_v2/: OPENVINO_MIGRATION_DOC.md  scanner.py
testing/: test_scanner_ai_script.py
